# ExpenseAccountingBot

./: .env.example  README.MD  docker-compose.yaml  pyproject.toml
.github/workflows/: blank.yml
app/: __init__.py  main.py
app/api/: bot.py
app/api/controller/: __init__.py  base_controller.py  expenses_controller.py  limits_controller.py  statistic_controller.py  user_controller.py
app/api/controller/report_controllers/: __init__.py  fast_report.py  parametrized_report.py
app/api/middleware/: middlewares.py
app/api/routers/: commands_router.py  delete_router.py  insert_router.py  limits_router.py  register_router.py  statistic_router.py
app/api/servises/: __init__.py
app/api/servises/fsm/: states.py
app/api/servises/helpers/: helpers.py
app/api/servises/kb_builders/: inline_kb.py  reply_kb.py
app/api/servises/mapping/: mapping.py
app/api/servises/report_builders/: __init__.py  base_builder.py  jpg_builder.py  pdf_builder.py  xls_builder.py  xlsx_builder.py  xml_builder.py
app/api/servises/texts/: texts.py
app/api/static/: texts.json
app/core/: app_initializer.py  config.py
app/db/: __init__.py  alembic.ini  connector.py
app/db/alembic/: env.py
app/db/models/: __init__.py  annual_expense.py  articles.py  auxiliary_tables.py  base_expense.py  daily_expense.py  expense_articles.py  monthly_expense.py  monthly_limits.py  user.py
app/db/repositories/: annual_expense.py  base.py  expense_articles.py  monthly_expense.py  monthly_limits.py  user.py
app/utils/: __init__.py  logger.py
docker/: Dockerfile
(+5 files in other folders)
