[tool.poetry]
name = "app"
version = "0.1.0"
description = "telegram bot to account your expenses"
authors = ["Aleksey Nikitin <nick12.11.2014@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.15.0"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
