[tool.poetry]
name = "app"
version = "0.1.0"
description = "telegram bot to account your expenses"
authors = ["Aleksey Nikitin <nick12.11.2014@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.15.0"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
alembic = "^1.14.0"
python-dotenv = "^1.0.1"
asyncpg = "^0.30.0"
tabulate = "^0.9.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
reportlab = "^4.2.5"
lxml = "^5.3.0"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
